--- a/src/eshop-microservices/docker-compose.yml
+++ b/src/eshop-microservices/docker-compose.yml
@@ -5,12 +5,22 @@ services:
   basketdb:
     image: postgres
 
+  distributedcache:
+    image: redis
+
   catalog.api:
     image: ${DOCKER_REGISTRY-}catalogapi
     build:
       context: ../Services/Catalog/Catalog.API
       dockerfile: Dockerfile
 
+  basket.api:
+    image: ${DOCKER_REGISTRY-}basketapi
+    build:
+      context: ../..
+      dockerfile: src/Services/Basket/Basket.API/Dockerfile
+
 volumes:
   postgres_catalog:
   postgres_basket:
+
